--- a/index.html
+++ b/index.html
@@ -20,25 +20,27 @@
   <body>
     <header class="header">
       <a href="index.html"><img src="img/logo.svg" class="header__logo" /> </a>
-      <h1 class="header__title">Andrés Fadú</h1>
+      <h1 class="title__h1--header">Andrés Fadú</h1>
       <span class="header__menu"><img src="img/icon-menu.svg" /></span>
     </header>
     <main>
       <section class="hero">
-        <h2 class="hero__title">Diseñador digital</h2>
-        <p class="hero__copy">
-          Me especializo en UI/UX y branding. Trabajo con startup y pymes para
-          crear productos digitales y marcas, impulsando su crecimiento.<br />Ayudo
-          a las empresas emergentes y de rápido crecimiento a ofrecer a sus
-          clientes experiencias que impacten en su crecimiento.
-        </p>
-        <img src="img/me.png" class="hero__img" />
-        <button class="button">
-          <img
-            src="img/Icon awesome-calendar-check.svg"
-            class="button__icon"
-          />Agenda una reunión
-        </button>
+        <div class="wrapper">
+          <h2 class="title__h2">Diseñador digital</h2>
+          <p class="hero__copy">
+            Me especializo en UI/UX y branding. Trabajo con startup y pymes para
+            crear productos digitales y marcas, impulsando su crecimiento.<br />Ayudo
+            a las empresas emergentes y de rápido crecimiento a ofrecer a sus
+            clientes experiencias que impacten en su crecimiento.
+          </p>
+          <img src="img/me.png" class="hero__img" />
+          <button class="button">
+            <img
+              src="img/Icon awesome-calendar-check.svg"
+              class="button__icon"
+            />Agenda una reunión
+          </button>
+        </div>
       </section>
     </main>
     <footer></footer>
