--- a/index.html
+++ b/index.html
@@ -14,14 +14,16 @@
       content="Diseño web, ux/ui, app, diseño de interfaces,
             diseño de experiencia de usuario, frontend, desarrollo web, diseño web uruguay, diseñador,paginas web, diseño web Montevideo, diseño web responsivo, soluciones web, apps, research UX"
     />
+
+    <link rel="icon" href="img/logo.svg" />
     <title>Andrés Fadú - Diseñador fullstack</title>
     <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
   <body>
     <header class="header">
-      <a href="index.html"><img src="img/logo.svg" class="header__logo" /> </a>
+      <a href="index.html" class="header__logo"><img src="img/logo.svg" /> </a>
       <h1 class="title__h1--header">Andrés Fadú</h1>
-      <span class="header__menu"><img src="img/icon-menu.svg" /></span>
+      <nav class="header__menu"><img src="img/icon-menu.svg" /></nav>
     </header>
     <main>
       <section class="hero">
@@ -33,13 +35,54 @@
             a las empresas emergentes y de rápido crecimiento a ofrecer a sus
             clientes experiencias que impacten en su crecimiento.
           </p>
-          <img src="img/me.png" class="hero__img" />
+          <div class="hero__img"></div>
           <button class="button">
             <img
               src="img/Icon awesome-calendar-check.svg"
               class="button__icon"
             />Agenda una reunión
           </button>
+        </div>
+      </section>
+      <section id="dicen">
+        <div class="wrapper wrapper__cards">
+          <h2 class="title__h2">DICEN DE MÍ</h2>
+          <div class="card">
+            <div class="card__avatar">
+              <img src="img/avatar_1.png" alt="" />
+            </div>
+            <h4 class="title__h4">Nombre completo</h4>
+            <h5 class="title__h5">Cargo - empresa</h5>
+            <p class="card__copy">
+              "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+              nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
+              Diam."
+            </p>
+          </div>
+          <div class="card">
+            <div class="card__avatar">
+              <img src="img/avatar_2.png" alt="" />
+            </div>
+            <h4 class="title__h4">Nombre completo</h4>
+            <h5 class="title__h5">Cargo - empresa</h5>
+            <p class="card__copy">
+              "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+              nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
+              Diam."
+            </p>
+          </div>
+          <div class="card">
+            <div class="card__avatar">
+              <img src="img/avatar_3.png" alt="" />
+            </div>
+            <h4 class="title__h4">Nombre completo</h4>
+            <h5 class="title__h5">Cargo - empresa</h5>
+            <p class="card__copy">
+              "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+              nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
+              Diam."
+            </p>
+          </div>
         </div>
       </section>
     </main>
