avance agregando link rrss

--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
         <div class="wrapper">
           <h2 class="title__h2">Diseñador digital</h2>
           <p class="hero__copy">
-            Me especializo en UI/UX y branding. Trabajo con startup y pymes para
-            crear productos digitales y marcas, impulsando su crecimiento.<br />Ayudo
-            a las empresas emergentes y de rápido crecimiento a ofrecer a sus
-            clientes experiencias que impacten en su crecimiento.
+            Me especializo en UI/UX, branding y maquetado frontend. Trabajo con
+            startup y pymes para crear productos digitales y marcas, impulsando
+            su crecimiento.<br />Ayudo a las empresas emergentes y de rápido
+            crecimiento a ofrecer a sus clientes experiencias que impacten en su
+            crecimiento.
           </p>
           <div class="hero__img"></div>
           <button class="button">
@@ -44,8 +45,16 @@
           </button>
         </div>
       </section>
+      <div class="rrss">
+        <a href="#" class="rrss__bt"><img src="/img/icon-instagram.svg" /> </a>
+        <a href="#" class="rrss__bt"><img src="/img/icon-github.svg" /> </a>
+        <a href="#" class="rrss__bt"><img src="/img/icon-linkedin.svg" /> </a>
+        <a href="#" class="rrss__bt"><img src="/img/icon-dribbble.svg" /> </a>
+        <a href="#" class="rrss__bt"><img src="/img/icon-behance.svg" /> </a>
+        <a href="#" class="rrss__bt"><img src="/img/icon-twitter.svg" /> </a>
+      </div>
       <section id="dicen">
-        <div class="wrapper wrapper__cards">
+        <div class="wrapper">
           <h2 class="title__h2">DICEN DE MÍ</h2>
           <div class="card">
             <div class="card__avatar">
@@ -86,6 +95,10 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div>
+        <p>&copy; Copyright 2020 - Andrés Fadú</p>
+      </div>
+    </footer>
   </body>
 </html>
