slider de dicen

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="icon" href="img/logo.svg" />
     <title>Andrés Fadú - Diseñador fullstack</title>
     <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="css/all.min.css" />
   </head>
   <body>
     <header class="header">
@@ -38,10 +39,8 @@
           </p>
           <div class="hero__img"></div>
           <button class="button">
-            <img
-              src="img/Icon awesome-calendar-check.svg"
-              class="button__icon"
-            />Agenda una reunión
+            <img src="img/icon-calendar-check.svg" class="button__icon" />Agenda
+            una reunión
           </button>
         </div>
       </section>
@@ -56,41 +55,45 @@
       <section id="dicen">
         <div class="wrapper">
           <h2 class="title__h2">DICEN DE MÍ</h2>
-          <div class="card">
-            <div class="card__avatar">
-              <img src="img/avatar_1.png" alt="" />
+        </div>
+        <div class="slider">
+          <div class="slider__card">
+            <div class="card">
+              <div class="card__avatar">
+                <img src="img/avatar_1.png" alt="" />
+              </div>
+              <h4 class="title__h4">Nombre completo</h4>
+              <h5 class="title__h5">Cargo - empresa</h5>
+              <p class="card__copy">
+                "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+                diam nonumy eirmod tempor invidunt ut labore et dolore magna
+                aliquyam Diam."
+              </p>
             </div>
-            <h4 class="title__h4">Nombre completo</h4>
-            <h5 class="title__h5">Cargo - empresa</h5>
-            <p class="card__copy">
-              "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
-              nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
-              Diam."
-            </p>
-          </div>
-          <div class="card">
-            <div class="card__avatar">
-              <img src="img/avatar_2.png" alt="" />
+            <div class="card">
+              <div class="card__avatar">
+                <img src="img/avatar_2.png" alt="" />
+              </div>
+              <h4 class="title__h4">Nombre completo</h4>
+              <h5 class="title__h5">Cargo - empresa</h5>
+              <p class="card__copy">
+                "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+                diam nonumy eirmod tempor invidunt ut labore et dolore magna
+                aliquyam Diam."
+              </p>
             </div>
-            <h4 class="title__h4">Nombre completo</h4>
-            <h5 class="title__h5">Cargo - empresa</h5>
-            <p class="card__copy">
-              "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
-              nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
-              Diam."
-            </p>
-          </div>
-          <div class="card">
-            <div class="card__avatar">
-              <img src="img/avatar_3.png" alt="" />
+            <div class="card">
+              <div class="card__avatar">
+                <img src="img/avatar_3.png" alt="" />
+              </div>
+              <h4 class="title__h4">Nombre completo</h4>
+              <h5 class="title__h5">Cargo - empresa</h5>
+              <p class="card__copy">
+                "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+                diam nonumy eirmod tempor invidunt ut labore et dolore magna
+                aliquyam Diam."
+              </p>
             </div>
-            <h4 class="title__h4">Nombre completo</h4>
-            <h5 class="title__h5">Cargo - empresa</h5>
-            <p class="card__copy">
-              "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
-              nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
-              Diam."
-            </p>
           </div>
         </div>
       </section>
