--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     <link rel="icon" href="img/logo.svg" />
     <title>Andrés Fadú - Diseñador fullstack</title>
     <link rel="stylesheet" type="text/css" href="css/style.css" />
-    <link rel="stylesheet" type="text/css" href="css/all.min.css" />
   </head>
   <body>
     <header class="header">
@@ -45,12 +44,12 @@
         </div>
       </section>
       <div class="rrss">
-        <a href="#" class="rrss__bt"><img src="/img/icon-instagram.svg" /> </a>
-        <a href="#" class="rrss__bt"><img src="/img/icon-github.svg" /> </a>
-        <a href="#" class="rrss__bt"><img src="/img/icon-linkedin.svg" /> </a>
-        <a href="#" class="rrss__bt"><img src="/img/icon-dribbble.svg" /> </a>
-        <a href="#" class="rrss__bt"><img src="/img/icon-behance.svg" /> </a>
-        <a href="#" class="rrss__bt"><img src="/img/icon-twitter.svg" /> </a>
+        <a href="#" class="rrss__bt"><img src="./img/icon-instagram.svg" /> </a>
+        <a href="#" class="rrss__bt"><img src="./img/icon-github.svg" /> </a>
+        <a href="#" class="rrss__bt"><img src="./img/icon-linkedin.svg" /> </a>
+        <a href="#" class="rrss__bt"><img src="./img/icon-dribbble.svg" /> </a>
+        <a href="#" class="rrss__bt"><img src="./img/icon-behance.svg" /> </a>
+        <a href="#" class="rrss__bt"><img src="./img/icon-twitter.svg" /> </a>
       </div>
       <section id="dicen">
         <div class="wrapper">
