corrección de bug en slider

--- a/index.html
+++ b/index.html
@@ -46,15 +46,14 @@
       <div class="rrss">
         <a href="#" class="rrss__bt"><img src="./img/icon-instagram.svg" /> </a>
         <a href="#" class="rrss__bt"><img src="./img/icon-github.svg" /> </a>
-        <a href="#" class="rrss__bt"><img src="./img/icon-linkedin.svg" /> </a>
+        <a href="#" class="rrss__bt"
+          ><img src="./img/icon-linkedin-in.svg"
+        /></a>
         <a href="#" class="rrss__bt"><img src="./img/icon-dribbble.svg" /> </a>
         <a href="#" class="rrss__bt"><img src="./img/icon-behance.svg" /> </a>
         <a href="#" class="rrss__bt"><img src="./img/icon-twitter.svg" /> </a>
       </div>
-      <section id="dicen">
-        <div class="wrapper">
-          <h2 class="title__h2">DICEN DE MÍ</h2>
-        </div>
+      <section id="recomendaciones">
         <div class="slider">
           <div class="slider__card">
             <div class="card">
