--- a/index.html
+++ b/index.html
@@ -20,10 +20,14 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
   <body>
-    <header class="header">
-      <a href="index.html" class="header__logo"><img src="img/logo.svg" /> </a>
-      <h1 class="title__h1--header">Andrés Fadú</h1>
-      <nav class="header__menu"><img src="img/icon-menu.svg" /></nav>
+    <header>
+      <div class="header">
+        <a href="index.html" class="header__logo"
+          ><img src="img/logo.svg" />
+        </a>
+        <h1 class="title__h1--header">Andrés Fadú</h1>
+        <nav class="header__menu"><img src="img/icon-menu.svg" /></nav>
+      </div>
     </header>
     <main>
       <section class="hero">
