optimización de card con grids para firefox

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
     <link rel="icon" href="img/logo.svg" />
     <title>Andrés Fadú - Diseñador fullstack</title>
+    <link rel="stylesheet" type="text/css" href="css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
   <body>
