--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </header>
     <main>
       <section class="hero">
-        <div class="wrapper">
+        <div class="wrapper hero__wrapper">
           <h2 class="title__h2">Diseñador digital</h2>
           <p class="hero__copy">
             Me especializo en UI/UX, branding y maquetado frontend. Trabajo con
@@ -41,22 +41,50 @@
             crecimiento a ofrecer a sus clientes experiencias que impacten en su
             crecimiento.
           </p>
-          <div class="hero__img"></div>
-          <button class="button">
+          <div class="hero__img"><img src="./img/me.png" /></div>
+          <a href="./pages/agenda.html" target="_blank" class="button">
             <img src="img/icon-calendar-check.svg" class="button__icon" />Agenda
             una reunión
-          </button>
+          </a>
         </div>
       </section>
       <div class="rrss">
-        <a href="#" class="rrss__bt"><img src="./img/icon-instagram.svg" /> </a>
-        <a href="#" class="rrss__bt"><img src="./img/icon-github.svg" /> </a>
-        <a href="#" class="rrss__bt"
+        <a
+          href="https://www.instagram.com/andresfadu/"
+          target="_blank"
+          class="rrss__bt"
+          ><img src="./img/icon-instagram.svg" />
+        </a>
+        <a
+          href="https://github.com/Andres-fadu"
+          target="_blank"
+          class="rrss__bt"
+          ><img src="./img/icon-github.svg" />
+        </a>
+        <a
+          href="https://www.linkedin.com/in/andresfadu"
+          target="_blank"
+          class="rrss__bt"
           ><img src="./img/icon-linkedin-in.svg"
         /></a>
-        <a href="#" class="rrss__bt"><img src="./img/icon-dribbble.svg" /> </a>
-        <a href="#" class="rrss__bt"><img src="./img/icon-behance.svg" /> </a>
-        <a href="#" class="rrss__bt"><img src="./img/icon-twitter.svg" /> </a>
+        <a
+          href="https://dribbble.com/Andres_Fadu"
+          target="_blank"
+          class="rrss__bt"
+          ><img src="./img/icon-dribbble.svg" />
+        </a>
+        <a
+          href="https://www.behance.net/fadudesign"
+          target="_blank"
+          class="rrss__bt"
+          ><img src="./img/icon-behance.svg" />
+        </a>
+        <a
+          href="https://twitter.com/AndresFadu"
+          target="_blank"
+          class="rrss__bt"
+          ><img src="./img/icon-twitter.svg" />
+        </a>
       </div>
       <section id="recomendaciones">
         <div class="slider">
