--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
               <div class="card__avatar">
                 <img src="img/avatar_1.png" alt="" />
               </div>
-              <h4 class="title__h4">Nombre completo</h4>
-              <h5 class="title__h5">Cargo - empresa</h5>
+              <h4 class="title__h5">Nombre completo</h4>
+              <h5 class="title__h6">Cargo - empresa</h5>
               <p class="card__copy">
                 "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
                 diam nonumy eirmod tempor invidunt ut labore et dolore magna
@@ -105,8 +105,8 @@
               <div class="card__avatar">
                 <img src="img/avatar_2.png" alt="" />
               </div>
-              <h4 class="title__h4">Nombre completo</h4>
-              <h5 class="title__h5">Cargo - empresa</h5>
+              <h4 class="title__h5">Nombre completo</h4>
+              <h5 class="title__h6">Cargo - empresa</h5>
               <p class="card__copy">
                 "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
                 diam nonumy eirmod tempor invidunt ut labore et dolore magna
@@ -117,8 +117,8 @@
               <div class="card__avatar">
                 <img src="img/avatar_3.png" alt="" />
               </div>
-              <h4 class="title__h4">Nombre completo</h4>
-              <h5 class="title__h5">Cargo - empresa</h5>
+              <h4 class="title__h5">Nombre completo</h4>
+              <h5 class="title__h6">Cargo - empresa</h5>
               <p class="card__copy">
                 "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
                 diam nonumy eirmod tempor invidunt ut labore et dolore magna
@@ -126,6 +126,22 @@
               </p>
             </div>
           </div>
+        </div>
+        <div class="wrapper">
+          <h2 class="title__h2--banner">
+            Tu sitio web debe convertir visitantes en clientes comprometidos.
+          </h2>
+          <h3 class="title__h3--banner">
+            Es como tener un representante de ventas de alto rendimiento trabajando 24/7.
+          </h3>
+          <h4 class="title__h4--banner">
+            En el mundo actual en el que vivimos de forma vertiginosa, tus clientes son bombardeados constantemente con diferentes mensajes de marketing, lo que hace que sea mucho más difícil para los ellos concentrarse y tomar la decisión correcta. Para destacarse de la competencia, su señal debe ser clara y precisa.</br>
+            Ayudo a las startups semillas, pymes y marcas personales a crear relaciones con sus clientes, comunicando un mensaje funcional, personalidad y valores al cliente potencial, a través de un diseño claro y comprensible y una experiencia de usuario memorable.
+          </h4>
+          <a href="./pages/agenda.html" target="_blank" class="button--banner">
+            <img src="img/icon-calendar-check-dark.svg" class="button__icon" />Agenda
+            una reunión
+          </a>
         </div>
       </section>
     </main>
