ajuste de botones

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             crecimiento.
           </p>
           <div class="hero__img"><img src="./img/me.png" /></div>
-          <a href="./pages/agenda.html" target="_blank" class="button">
+          <a href="./pages/agenda.html" target="_blank" class="button hero__button">
             <img src="img/icon-calendar-check.svg" class="button__icon" />Agenda
             una reunión
           </a>
@@ -138,7 +138,7 @@
             En el mundo actual en el que vivimos de forma vertiginosa, tus clientes son bombardeados constantemente con diferentes mensajes de marketing, lo que hace que sea mucho más difícil para los ellos concentrarse y tomar la decisión correcta. Para destacarse de la competencia, su señal debe ser clara y precisa.</br>
             Ayudo a las startups semillas, pymes y marcas personales a crear relaciones con sus clientes, comunicando un mensaje funcional, personalidad y valores al cliente potencial, a través de un diseño claro y comprensible y una experiencia de usuario memorable.
           </h4>
-          <a href="./pages/agenda.html" target="_blank" class="button--banner">
+          <a href="./pages/agenda.html" target="_blank" class="button-line button--banner">
             <img src="img/icon-calendar-check-dark.svg" class="button__icon" />Agenda
             una reunión
           </a>
