--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@
             Tu sitio web debe convertir visitantes en clientes comprometidos.
           </h2>
           <h3 class="title__h3--banner">
-            Es como tener un representante de ventas de alto rendimiento trabajando 24/7.
+            Es tener un representante de ventas de alto rendimiento trabajando 24/7.
           </h3>
           <h4 class="title__h4--banner">
-            En el mundo actual en el que vivimos de forma vertiginosa, tus clientes son bombardeados constantemente con diferentes mensajes de marketing, lo que hace que sea mucho más difícil para los ellos concentrarse y tomar la decisión correcta. Para destacarse de la competencia, su señal debe ser clara y precisa.</br>
+            En el mundo actual en el que vivimos de forma vertiginosa, tus clientes son tentados constantemente con diferentes mensajes de marketing, lo que hace que sea mucho más difícil para ellos concentrarse y tomar la decisión correcta. Para destacarse de la competencia, su señal debe ser clara y precisa.</br>
             Ayudo a las startups semillas, pymes y marcas personales a crear relaciones con sus clientes, comunicando un mensaje funcional, personalidad y valores al cliente potencial, a través de un diseño claro y comprensible y una experiencia de usuario memorable.
           </h4>
           <a href="./pages/agenda.html" target="_blank" class="button-line button--banner">
@@ -144,11 +144,41 @@
           </a>
         </div>
       </section>
+      <section id="metodos">
+        <div class="wrapper">
+          <h2 class="title__h2">¿Que metodos utilizo?</h2>
+          <button type="button" class="colapsable">Identidad de marca</button>
+          <div class="content">
+            <p>Lorem ipsum...</p>
+          </div>
+          <button type="button" class="colapsable">Diseño UX/UI</button>
+          <div class="content">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus eligendi esse unde modi beatae corrupti nostrum, repudiandae numquam ad qui provident maiores, minus est iure adipisci, commodi similique aliquid dolorum?</p>
+          </div>
+          <button type="button" class="colapsable">Diseño web</button>
+          <div class="content">
+            <p>Lorem ipsum...</p>
+          </div>
+          <button type="button" class="colapsable">Maquetado front-end</button>
+          <div class="content">
+            <p>Lorem ipsum...</p>
+          </div>
+          <button type="button" class="colapsable">Design thinking y design sprint</button>
+          <div class="content">
+            <p>Lorem ipsum...</p>
+          </div>
+          <button type="button" class="colapsable">Diseño de producto</button>
+          <div class="content">
+            <p>Lorem ipsum...</p>
+          </div>
+        </div>
+      </section>
     </main>
     <footer>
       <div>
         <p>&copy; Copyright 2020 - Andrés Fadú</p>
       </div>
     </footer>
+    <script src="js/scripts.js"></script>
   </body>
 </html>
