--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Andrés Fadú, diseño y desarrollo web, orientado en resultados de crecimiento para pimes y startups, UX/UI, apps web y movil, branding."
+      colapsable__content="Andrés Fadú, diseño y desarrollo web, orientado en resultados de crecimiento para pimes y startups, UX/UI, apps web y movil, branding."
     />
-    <meta name="robots" content="index, follow" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Andrés Fadú" />
+    <meta name="robots" colapsable__content="index, follow" />
+    <meta name="viewport" colapsable__content="width=device-width, initial-scale=1.0" />
+    <meta name="author" colapsable__content="Andrés Fadú" />
     <meta
       name="keywords"
-      content="Diseño web, ux/ui, app, diseño de interfaces,
+      colapsable__content="Diseño web, ux/ui, app, diseño de interfaces,
             diseño de experiencia de usuario, frontend, desarrollo web, diseño web uruguay, diseñador,paginas web, diseño web Montevideo, diseño web responsivo, soluciones web, apps, research UX"
     />
 
@@ -27,7 +27,13 @@
           ><img src="img/logo.svg" />
         </a>
         <h1 class="title__h1--header">Andrés Fadú</h1>
-        <nav class="header__menu"><img src="img/icon-menu.svg" /></nav>
+        <nav class="header__menu">
+          <button class="hamburger hamburger--arrowturn-r" type="button">
+            <span class="hamburger-box">
+              <span class="hamburger-inner"></span>
+            </span>
+          </button>
+        </nav>
       </div>
     </header>
     <main>
@@ -147,30 +153,47 @@
       <section id="metodos">
         <div class="wrapper">
           <h2 class="title__h2">¿Que metodos utilizo?</h2>
-          <button type="button" class="colapsable">Identidad de marca</button>
-          <div class="content">
-            <p>Lorem ipsum...</p>
+          <div class="colapsable">
+            <button type="button" class="colapsable__button">Identidad de marca</button>
+            <div class="colapsable__content">
+              <p>Lorem ipsum...</p>
+            </div>
+            <button type="button" class="colapsable__button">Diseño UX/UI</button>
+            <div class="colapsable__content">
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus eligendi esse unde modi beatae corrupti nostrum, repudiandae numquam ad qui provident maiores, minus est iure adipisci, commodi similique aliquid dolorum?</p>
+            </div>
+            <button type="button" class="colapsable__button">Diseño web</button>
+            <div class="colapsable__content">
+              <p>Lorem ipsum...</p>
+            </div>
+            <button type="button" class="colapsable__button">Maquetado front-end</button>
+            <div class="colapsable__content">
+              <p>Lorem ipsum...</p>
+            </div>
+            <button type="button" class="colapsable__button">Design thinking y design sprint</button>
+            <div class="colapsable__content">
+              <p>Lorem ipsum...</p>
+            </div>
+            <button type="button" class="colapsable__button">Diseño de producto</button>
+            <div class="colapsable__content">
+              <p>Lorem ipsum...</p>
+            </div>
           </div>
-          <button type="button" class="colapsable">Diseño UX/UI</button>
-          <div class="content">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus eligendi esse unde modi beatae corrupti nostrum, repudiandae numquam ad qui provident maiores, minus est iure adipisci, commodi similique aliquid dolorum?</p>
-          </div>
-          <button type="button" class="colapsable">Diseño web</button>
-          <div class="content">
-            <p>Lorem ipsum...</p>
-          </div>
-          <button type="button" class="colapsable">Maquetado front-end</button>
-          <div class="content">
-            <p>Lorem ipsum...</p>
-          </div>
-          <button type="button" class="colapsable">Design thinking y design sprint</button>
-          <div class="content">
-            <p>Lorem ipsum...</p>
-          </div>
-          <button type="button" class="colapsable">Diseño de producto</button>
-          <div class="content">
-            <p>Lorem ipsum...</p>
-          </div>
+          <div class="wrapper">
+          <h2 class="title__h2--banner">
+            Todo se reduce a comprender a tus usuarios. Por eso el diseño es una parte fundamental en la conversión de nuevos clientes y en la retención de tu clientes activos.
+          </h2>
+          <h3 class="title__h3--banner">
+            El flujo de trabajo que implemento se puede dividir en dos etapas principales: preparación y ejecución. Durante la etapa de preparación, nos enfocamos en hacer un plan detallado para la ejecución del proyecto y su alcance. El trabajo, las pruebas y la validación reales se realizan en la segunda etapa.
+          </h3>
+          <h4 class="title__h4--banner">
+            Nuestro primer objetivo es comprender completamente a sus usuarios y descubrir sus deseos y necesidades, frustración y objetivos. Solo entonces podremos diseñar una estrategia con un mensaje consistente y un diseño basado en conversiones para tu sitio web.
+          </h4>
+          <a href="./pages/agenda.html" target="_blank" class="button-line button--banner">
+            <img src="img/icon-calendar-check-dark.svg" class="button__icon" />Agenda
+            una reunión
+          </a>
+        </div>
         </div>
       </section>
     </main>
