--- a/index.html
+++ b/index.html
@@ -1,20 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="description"
-      colapsable__content="Andrés Fadú, diseño y desarrollo web, orientado en resultados de crecimiento para pimes y startups, UX/UI, apps web y movil, branding."
-    />
-    <meta name="robots" colapsable__content="index, follow" />
-    <meta name="viewport" colapsable__content="width=device-width, initial-scale=1.0" />
-    <meta name="author" colapsable__content="Andrés Fadú" />
-    <meta
-      name="keywords"
-      colapsable__content="Diseño web, ux/ui, app, diseño de interfaces,
-            diseño de experiencia de usuario, frontend, desarrollo web, diseño web uruguay, diseñador,paginas web, diseño web Montevideo, diseño web responsivo, soluciones web, apps, research UX"
-    />
-
+    <meta charset="UTF-8">
+    <meta name="description" content="Andrés Fadú, diseño y desarrollo web, orientado en resultados de crecimiento para pimes y startups, UX/UI, apps web y movil, branding.">
+    <meta name="robots" content="index, follow">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Andrés Fadú">
+    <meta name="keywords" content="Diseño web, ux/ui, app, diseño de interfaces,
+      diseño de experiencia de usuario, frontend, desarrollo web, diseño web uruguay, diseñador,paginas web, diseño web Montevideo, diseño web responsivo, soluciones web, apps, research UX">
     <link rel="icon" href="img/logo.svg" />
     <title>Andrés Fadú - Diseñador fullstack</title>
     <link rel="stylesheet" type="text/css" href="css/normalize.css" />
@@ -40,14 +33,14 @@
       <section class="hero">
         <div class="wrapper hero__wrapper">
           <h2 class="title__h2">Diseñador digital</h2>
-          <p class="hero__copy">
+          <h3 class="hero__copy title__h3">
             Me especializo en UI/UX, branding y maquetado frontend. Trabajo con
             startup y pymes para crear productos digitales y marcas, impulsando
             su crecimiento.<br />Ayudo a las empresas emergentes y de rápido
             crecimiento a ofrecer a sus clientes experiencias que impacten en su
             crecimiento.
-          </p>
-          <div class="hero__img"><img src="./img/me.png" /></div>
+          </h3>
+          <div class="hero__img"></div>
           <a href="./pages/agenda.html" target="_blank" class="button hero__button">
             <img src="img/icon-calendar-check.svg" class="button__icon" />Agenda
             una reunión
@@ -134,20 +127,28 @@
           </div>
         </div>
         <div class="wrapper">
-          <h2 class="title__h2--banner">
-            Tu sitio web debe convertir visitantes en clientes comprometidos.
-          </h2>
-          <h3 class="title__h3--banner">
-            Es tener un representante de ventas de alto rendimiento trabajando 24/7.
-          </h3>
-          <h4 class="title__h4--banner">
-            En el mundo actual en el que vivimos de forma vertiginosa, tus clientes son tentados constantemente con diferentes mensajes de marketing, lo que hace que sea mucho más difícil para ellos concentrarse y tomar la decisión correcta. Para destacarse de la competencia, su señal debe ser clara y precisa.</br>
-            Ayudo a las startups semillas, pymes y marcas personales a crear relaciones con sus clientes, comunicando un mensaje funcional, personalidad y valores al cliente potencial, a través de un diseño claro y comprensible y una experiencia de usuario memorable.
-          </h4>
-          <a href="./pages/agenda.html" target="_blank" class="button-line button--banner">
-            <img src="img/icon-calendar-check-dark.svg" class="button__icon" />Agenda
-            una reunión
-          </a>
+          <div class="container__banner">
+            <div class="container__banner--h2">
+              <h2 class="title__h2--banner">
+                Tu sitio web debe convertir visitantes en clientes comprometidos.
+              </h2>
+            </div>
+            <div class="container__banner--h3">
+              <h3 class="title__h3--banner">
+                Es tener un representante de ventas de alto rendimiento trabajando 24/7.
+              </h3>
+            </div>
+            <div class="container__banner--h4">
+              <h4 class="title__h4--banner">
+                En el mundo actual en el que vivimos de forma vertiginosa, tus clientes son tentados constantemente con diferentes mensajes de marketing, lo que hace que sea mucho más difícil para ellos concentrarse y tomar la decisión correcta. Para destacarse de la competencia, su señal debe ser clara y precisa.</br>
+                Ayudo a las startups semillas, pymes y marcas personales a crear relaciones con sus clientes, comunicando un mensaje funcional, personalidad y valores al cliente potencial, a través de un diseño claro y comprensible y una experiencia de usuario memorable.
+              </h4>
+              <a href="./pages/agenda.html" target="_blank" class="button-line button--banner">
+                <img src="img/icon-calendar-check-dark.svg" class="button__icon" />Agenda
+                una reunión
+              </a>
+            </div>
+          </div>
         </div>
       </section>
       <section id="metodos">
@@ -155,45 +156,57 @@
           <h2 class="title__h2">¿Que metodos utilizo?</h2>
           <div class="colapsable">
             <button type="button" class="colapsable__button">Identidad de marca</button>
-            <div class="colapsable__content">
+            <div class="colapsable__text">
               <p>Lorem ipsum...</p>
             </div>
             <button type="button" class="colapsable__button">Diseño UX/UI</button>
-            <div class="colapsable__content">
+            <div class="colapsable__text">
               <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus eligendi esse unde modi beatae corrupti nostrum, repudiandae numquam ad qui provident maiores, minus est iure adipisci, commodi similique aliquid dolorum?</p>
             </div>
             <button type="button" class="colapsable__button">Diseño web</button>
-            <div class="colapsable__content">
+            <div class="colapsable__text">
               <p>Lorem ipsum...</p>
             </div>
             <button type="button" class="colapsable__button">Maquetado front-end</button>
-            <div class="colapsable__content">
+            <div class="colapsable__text">
               <p>Lorem ipsum...</p>
             </div>
             <button type="button" class="colapsable__button">Design thinking y design sprint</button>
-            <div class="colapsable__content">
+            <div class="colapsable__text">
               <p>Lorem ipsum...</p>
             </div>
             <button type="button" class="colapsable__button">Diseño de producto</button>
-            <div class="colapsable__content">
+            <div class="colapsable__text">
               <p>Lorem ipsum...</p>
             </div>
           </div>
-          <div class="wrapper">
-          <h2 class="title__h2--banner">
-            Todo se reduce a comprender a tus usuarios. Por eso el diseño es una parte fundamental en la conversión de nuevos clientes y en la retención de tu clientes activos.
-          </h2>
-          <h3 class="title__h3--banner">
-            El flujo de trabajo que implemento se puede dividir en dos etapas principales: preparación y ejecución. Durante la etapa de preparación, nos enfocamos en hacer un plan detallado para la ejecución del proyecto y su alcance. El trabajo, las pruebas y la validación reales se realizan en la segunda etapa.
-          </h3>
-          <h4 class="title__h4--banner">
-            Nuestro primer objetivo es comprender completamente a sus usuarios y descubrir sus deseos y necesidades, frustración y objetivos. Solo entonces podremos diseñar una estrategia con un mensaje consistente y un diseño basado en conversiones para tu sitio web.
-          </h4>
-          <a href="./pages/agenda.html" target="_blank" class="button-line button--banner">
-            <img src="img/icon-calendar-check-dark.svg" class="button__icon" />Agenda
-            una reunión
-          </a>
         </div>
+        <div class="wrapper">
+          <div class="container__banner">
+            <div class="container__banner--h2">
+              <h2 class="title__h2--banner">
+                Todo se reduce a comprender a tus usuarios. Por eso el diseño es una parte fundamental en la conversión de nuevos clientes y en la retención de tu clientes activos.
+              </h2>
+            </div>
+            <div class="container__banner--h3">
+              <h3 class="title__h3--banner">
+                El flujo de trabajo que implemento se puede dividir en dos etapas principales: preparación y ejecución. Durante la etapa de preparación, nos enfocamos en hacer un plan detallado para la ejecución del proyecto y su alcance. El trabajo, las pruebas y la validación reales se realizan en la segunda etapa.
+              </h3>
+            </div>
+            <div class="container__banner--h4">
+              <h4 class="title__h4--banner">
+                Nuestro primer objetivo es comprender completamente a sus usuarios y descubrir sus deseos y necesidades, frustración y objetivos. Solo entonces podremos diseñar una estrategia con un mensaje consistente y un diseño basado en conversiones para tu sitio web.
+              </h4>
+              <a href="./pages/agenda.html" target="_blank" class="button-line button--banner">
+                <img src="img/icon-calendar-check-dark.svg" class="button__icon" />Agenda
+                una reunión
+              </a>
+            </div>
+          </div>
+      </div>
+      </section>
+      <section id="portafolio">
+        <div class="wrapper">
         </div>
       </section>
     </main>
