--- a/index.html
+++ b/index.html
@@ -12,20 +12,27 @@
     <title>Andrés Fadú - Diseñador fullstack</title>
     <link rel="stylesheet" type="text/css" href="css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <script src="./js/jquery-3.5.1.min.js"></script>
   </head>
   <body>
     <header>
-      <div class="header">
-        <a href="index.html" class="header__logo"
-          ><img src="img/logo.svg" />
-        </a>
-        <h1 class="title__h1--header">Andrés Fadú</h1>
+      <div class="header wrapper header__wrapper">
+        <div class="header__logo">
+          <a href="index.html" class="header__logotipo"><img src="img/logo.svg" /></a>
+          <a href="index.html"><h1 class="title__h1--header">Andrés Fadú</h1></a>
+        </div>
+        <button class="hamburger hamburger--arrowturn-r" type="button">
+          <span class="hamburger-box">
+            <span class="hamburger-inner"></span>
+          </span>
+        </button>
         <nav class="header__menu">
-          <button class="hamburger hamburger--arrowturn-r" type="button">
-            <span class="hamburger-box">
-              <span class="hamburger-inner"></span>
-            </span>
-          </button>
+          <ul>
+            <li><a href="#metodos" class="header__a">MIS SERVICIOS</a></li>
+            <li><a href="#" class="header__a">PORTAFOLIO</a></li>
+            <li><a href="#" class="header__a">FAQ</a></li>
+            <li><a href="#" class="header__a">CONTACTO</a></li>
+          </ul>
         </nav>
       </div>
     </header>
@@ -153,7 +160,7 @@
       </section>
       <section id="metodos">
         <div class="wrapper">
-          <h2 class="title__h2">¿Que metodos utilizo?</h2>
+          <h2 class="title__h2">¿Que servicios brindo?</h2>
           <div class="colapsable">
             <button type="button" class="colapsable__button">Identidad de marca</button>
             <div class="colapsable__text">
