--- a/contacto/contacto.html
+++ b/contacto/contacto.html
@@ -25,12 +25,12 @@
     <header>
       <div class="header wrapper header__wrapper">
         <div class="header__logo">
-          <a href="../index.html" class="header__logotipo"
+          <a href="index.html" class="header__logotipo"
             ><img src="../img/logo.svg"
           /></a>
-          <a href="../index.html">
-            <h1 class="title__h1--header">Andrés Fadú</h1>
-          </a>
+          <a href="../index.html"
+            ><h1 class="title__h1--header">Andrés Fadú</h1></a
+          >
         </div>
         <button class="hamburger hamburger--arrowturn-r" type="button">
           <span class="hamburger-box">
@@ -49,27 +49,19 @@
                 >PORTAFOLIO</a
               >
             </li>
-            <li><a href="../index.html #faq" class="header__a">FAQ</a></li>
             <li>
-              <a href="../contacto/contacto.html" class="header__a">CONTACTO</a>
+              <a href="../index.html #faq" class="header__a">FAQ</a>
+            </li>
+            <li>
+              <a href="./contacto.html" class="header__a">CONTACTO</a>
             </li>
           </ul>
         </nav>
       </div>
     </header>
     <main>
-      <section id="agenda">
-        <!-- Principio del widget integrado de Calendly -->
-        <div
-          class="calendly-inline-widget"
-          data-url="https://calendly.com/andresfadu/15min"
-          style="min-width: 320px; height: 630px"
-        ></div>
-        <script
-          type="text/javascript"
-          src="https://assets.calendly.com/assets/external/widget.js"
-        ></script>
-        <!-- Final del widget integrado de Calendly -->
+      <section id="contacto">
+        <div class="wrapper contacto"></div>
       </section>
     </main>
     <footer>
@@ -78,7 +70,7 @@
       </div>
       <div class="footer__button">
         <a
-          href="./pages/agenda.html"
+          href="../pages/agenda.html"
           target="_blank"
           class="button-line--footer button--footer"
           ><img
