--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         <nav class="header__menu">
           <ul>
             <li><a href="#metodos" class="header__a">MIS SERVICIOS</a></li>
-            <li><a href="#" class="header__a">PORTAFOLIO</a></li>
-            <li><a href="#" class="header__a">FAQ</a></li>
-            <li><a href="#" class="header__a">CONTACTO</a></li>
+            <li><a href="#portafolio" class="header__a">PORTAFOLIO</a></li>
+            <li><a href="#faq" class="header__a">FAQ</a></li>
+            <li><a href="./contacto/contacto.html" class="header__a">CONTACTO</a></li>
           </ul>
         </nav>
       </div>
@@ -214,12 +214,64 @@
       </section>
       <section id="portafolio">
         <div class="wrapper">
+          <h2 class="title__h2">proyectos</h2>
+          <div class="colapsable">
+            <button type="button" class="colapsable__button">Identidad de marca</button>
+            <div class="colapsable__text">
+              <a href="#"><img src="./img/me.png"></img></a>
+            </div>
+            <button type="button" class="colapsable__button">Diseño UX/UI</button>
+            <div class="colapsable__text">
+              <img src="#"></img>
+            </div>
+            <button type="button" class="colapsable__button">Diseño web</button>
+            <div class="colapsable__text">
+              <img src="#"></img>
+            </div>
+            <button type="button" class="colapsable__button">Maquetado front-end</button>
+            <div class="colapsable__text">
+              <img src="#"></img>
+            </div>
+            <button type="button" class="colapsable__button">UX Research</button>
+            <div class="colapsable__text">
+              <img src="#"></img>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="sobre-mi">
+
+      </section>
+      <section id="faq">
+        <div class="wrapper">
+          <h2 class="title__h2">faq</h2>
+          <div class="colapsable">
+            <button type="button" class="colapsable__button">¿Cuál es el costo promedio del proyecto?</button>
+            <div class="colapsable__text">
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus eligendi esse unde modi beatae corrupti nostrum, repudiandae numquam ad qui provident maiores, minus est iure adipisci, commodi similique aliquid dolorum?</p>
+            </div>
+            <button type="button" class="colapsable__button">¿Cuánto tiempo tardarás en renovar nuestro sitio web?</button>
+            <div class="colapsable__text">
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus eligendi esse unde modi beatae corrupti nostrum, repudiandae numquam ad qui provident maiores, minus est iure adipisci, commodi similique aliquid dolorum?</p>
+            </div>
+            <button type="button" class="colapsable__button">¿Qué proceso puedo esperar?</button>
+            <div class="colapsable__text">
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus eligendi esse unde modi beatae corrupti nostrum, repudiandae numquam ad qui provident maiores, minus est iure adipisci, commodi similique aliquid dolorum?</p>
+            </div>
+            <button type="button" class="colapsable__button">¿Qué puedo esperar en nuestra primera llamada?</button>
+            <div class="colapsable__text">
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus eligendi esse unde modi beatae corrupti nostrum, repudiandae numquam ad qui provident maiores, minus est iure adipisci, commodi similique aliquid dolorum?</p>
+            </div>
+          </div>
         </div>
       </section>
     </main>
     <footer>
       <div>
-        <p>&copy; Copyright 2020 - Andrés Fadú</p>
+        <p>&copy; Copyright 2021 Andrés Fadú - hola@andresfadu.com</p>
+      </div>
+      <div class="footer__button">
+        <a href="./pages/agenda.html" target="_blank" class="button-line--footer button--footer"><img src="img/icon-calendar-check.svg" class="button__icon" />Agendauna reunión</a>
       </div>
     </footer>
     <script src="js/scripts.js"></script>
