--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <li><a href="#metodos" class="header__a">MIS SERVICIOS</a></li>
             <li><a href="#portafolio" class="header__a">PORTAFOLIO</a></li>
             <li><a href="#faq" class="header__a">FAQ</a></li>
-            <li><a href="./contacto/contacto.html" class="header__a">CONTACTO</a></li>
+            <li><a href="#contacto" class="header__a">CONTACTO</a></li>
           </ul>
         </nav>
       </div>
@@ -164,27 +164,51 @@
           <div class="colapsable">
             <button type="button" class="colapsable__button">Identidad de marca</button>
             <div class="colapsable__text">
-              <p>Lorem ipsum...</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos praesentium quisquam officiis maxime molestias consequuntur quas velit dolorem vero ratione! Accusamus consequatur mollitia culpa tempore a, non adipisci deserunt minus.
+              Modi expedita aperiam libero molestiae numquam alias ex sint recusandae enim, iure sunt error corrupti dolores in. Asperiores, vitae eveniet ex quod aliquam harum ab aperiam debitis neque totam deleniti!
+              Iure corrupti enim non quod vero itaque. Sunt temporibus autem, eligendi placeat quibusdam voluptatum modi. Minima beatae, similique accusantium sapiente voluptatum amet? Eius voluptatem repudiandae necessitatibus sapiente voluptatum maiores quis!
+              Laboriosam excepturi sint similique voluptatem alias vitae illo optio perferendis iusto ea, voluptatibus temporibus laudantium dolore ducimus, corrupti non sunt possimus? Ratione non optio laboriosam voluptatem voluptas quasi cupiditate nobis.
+              Vel dolor quis, officia beatae quasi praesentium illo perspiciatis aspernatur recusandae repudiandae alias ex excepturi culpa saepe quas quisquam laudantium sequi nesciunt molestias impedit omnis iste, quam maxime. Alias, rerum.</p>
             </div>
             <button type="button" class="colapsable__button">Diseño UX/UI</button>
             <div class="colapsable__text">
-              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus eligendi esse unde modi beatae corrupti nostrum, repudiandae numquam ad qui provident maiores, minus est iure adipisci, commodi similique aliquid dolorum?</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos praesentium quisquam officiis maxime molestias consequuntur quas velit dolorem vero ratione! Accusamus consequatur mollitia culpa tempore a, non adipisci deserunt minus.
+              Modi expedita aperiam libero molestiae numquam alias ex sint recusandae enim, iure sunt error corrupti dolores in. Asperiores, vitae eveniet ex quod aliquam harum ab aperiam debitis neque totam deleniti!
+              Iure corrupti enim non quod vero itaque. Sunt temporibus autem, eligendi placeat quibusdam voluptatum modi. Minima beatae, similique accusantium sapiente voluptatum amet? Eius voluptatem repudiandae necessitatibus sapiente voluptatum maiores quis!
+              Laboriosam excepturi sint similique voluptatem alias vitae illo optio perferendis iusto ea, voluptatibus temporibus laudantium dolore ducimus, corrupti non sunt possimus? Ratione non optio laboriosam voluptatem voluptas quasi cupiditate nobis.
+              Vel dolor quis, officia beatae quasi praesentiumLorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus eligendi esse unde modi beatae corrupti nostrum, repudiandae numquam ad qui provident maiores, minus est iure adipisci, commodi similique aliquid dolorum?</p>
             </div>
             <button type="button" class="colapsable__button">Diseño web</button>
             <div class="colapsable__text">
-              <p>Lorem ipsum...</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos praesentium quisquam officiis maxime molestias consequuntur quas velit dolorem vero ratione! Accusamus consequatur mollitia culpa tempore a, non adipisci deserunt minus.
+              Modi expedita aperiam libero molestiae numquam alias ex sint recusandae enim, iure sunt error corrupti dolores in. Asperiores, vitae eveniet ex quod aliquam harum ab aperiam debitis neque totam deleniti!
+              Iure corrupti enim non quod vero itaque. Sunt temporibus autem, eligendi placeat quibusdam voluptatum modi. Minima beatae, similique accusantium sapiente voluptatum amet? Eius voluptatem repudiandae necessitatibus sapiente voluptatum maiores quis!
+              Laboriosam excepturi sint similique voluptatem alias vitae illo optio perferendis iusto ea, voluptatibus temporibus laudantium dolore ducimus, corrupti non sunt possimus? Ratione non optio laboriosam voluptatem voluptas quasi cupiditate nobis.
+              Vel dolor quis, officia beatae quasi praesentium illo perspiciatis aspernatur recusandae repudiandae alias ex excepturi culpa saepe quas quisquam laudantium sequi nesciunt molestias impedit omnis iste, quam maxime. Alias, rerum.</p>
             </div>
             <button type="button" class="colapsable__button">Maquetado front-end</button>
             <div class="colapsable__text">
-              <p>Lorem ipsum...</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos praesentium quisquam officiis maxime molestias consequuntur quas velit dolorem vero ratione! Accusamus consequatur mollitia culpa tempore a, non adipisci deserunt minus.
+              Modi expedita aperiam libero molestiae numquam alias ex sint recusandae enim, iure sunt error corrupti dolores in. Asperiores, vitae eveniet ex quod aliquam harum ab aperiam debitis neque totam deleniti!
+              Iure corrupti enim non quod vero itaque. Sunt temporibus autem, eligendi placeat quibusdam voluptatum modi. Minima beatae, similique accusantium sapiente voluptatum amet? Eius voluptatem repudiandae necessitatibus sapiente voluptatum maiores quis!
+              Laboriosam excepturi sint similique voluptatem alias vitae illo optio perferendis iusto ea, voluptatibus temporibus laudantium dolore ducimus, corrupti non sunt possimus? Ratione non optio laboriosam voluptatem voluptas quasi cupiditate nobis.
+              Vel dolor quis, officia beatae quasi praesentium illo perspiciatis aspernatur recusandae repudiandae alias ex excepturi culpa saepe quas quisquam laudantium sequi nesciunt molestias impedit omnis iste, quam maxime. Alias, rerum.</p>
             </div>
             <button type="button" class="colapsable__button">Design thinking y design sprint</button>
             <div class="colapsable__text">
-              <p>Lorem ipsum...</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos praesentium quisquam officiis maxime molestias consequuntur quas velit dolorem vero ratione! Accusamus consequatur mollitia culpa tempore a, non adipisci deserunt minus.
+              Modi expedita aperiam libero molestiae numquam alias ex sint recusandae enim, iure sunt error corrupti dolores in. Asperiores, vitae eveniet ex quod aliquam harum ab aperiam debitis neque totam deleniti!
+              Iure corrupti enim non quod vero itaque. Sunt temporibus autem, eligendi placeat quibusdam voluptatum modi. Minima beatae, similique accusantium sapiente voluptatum amet? Eius voluptatem repudiandae necessitatibus sapiente voluptatum maiores quis!
+              Laboriosam excepturi sint similique voluptatem alias vitae illo optio perferendis iusto ea, voluptatibus temporibus laudantium dolore ducimus, corrupti non sunt possimus? Ratione non optio laboriosam voluptatem voluptas quasi cupiditate nobis.
+              Vel dolor quis, officia beatae quasi praesentium illo perspiciatis aspernatur recusandae repudiandae alias ex excepturi culpa saepe quas quisquam laudantium sequi nesciunt molestias impedit omnis iste, quam maxime. Alias, rerum.</p>
             </div>
             <button type="button" class="colapsable__button">Diseño de producto</button>
             <div class="colapsable__text">
-              <p>Lorem ipsum...</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos praesentium quisquam officiis maxime molestias consequuntur quas velit dolorem vero ratione! Accusamus consequatur mollitia culpa tempore a, non adipisci deserunt minus.
+              Modi expedita aperiam libero molestiae numquam alias ex sint recusandae enim, iure sunt error corrupti dolores in. Asperiores, vitae eveniet ex quod aliquam harum ab aperiam debitis neque totam deleniti!
+              Iure corrupti enim non quod vero itaque. Sunt temporibus autem, eligendi placeat quibusdam voluptatum modi. Minima beatae, similique accusantium sapiente voluptatum amet? Eius voluptatem repudiandae necessitatibus sapiente voluptatum maiores quis!
+              Laboriosam excepturi sint similique voluptatem alias vitae illo optio perferendis iusto ea, voluptatibus temporibus laudantium dolore ducimus, corrupti non sunt possimus? Ratione non optio laboriosam voluptatem voluptas quasi cupiditate nobis.
+              Vel dolor quis, officia beatae quasi praesentium illo perspiciatis aspernatur recusandae repudiandae alias ex excepturi culpa saepe quas quisquam laudantium sequi nesciunt molestias impedit omnis iste, quam maxime. Alias, rerum.</p>
             </div>
           </div>
         </div>
@@ -218,23 +242,23 @@
           <div class="colapsable">
             <button type="button" class="colapsable__button">Identidad de marca</button>
             <div class="colapsable__text">
-              <a href="#"><img src="./img/me.png"></img></a>
+              <a href="https://www.behance.net/gallery/107496543/Diseno-de-marca-personal-Andrs-Fadu" target="_blank"><img src="./img/branding.jpg"></img></a>
             </div>
             <button type="button" class="colapsable__button">Diseño UX/UI</button>
             <div class="colapsable__text">
-              <img src="#"></img>
+              <a href="https://www.behance.net/gallery/112043769/Adopta-un-corazon-Diseno-UXUI" target="blank"><img src="./img/uxui.jpg"></img></a>
             </div>
             <button type="button" class="colapsable__button">Diseño web</button>
             <div class="colapsable__text">
-              <img src="#"></img>
+              <a href="https://andresfadu.com" target="blank"><img src="./img/diseño-web.jpg"></img></a>
             </div>
             <button type="button" class="colapsable__button">Maquetado front-end</button>
             <div class="colapsable__text">
-              <img src="#"></img>
+              <a href="https://github.com/Andres-fadu" target="blank"><img src="./img/maquetado.jpg"></img></a>
             </div>
             <button type="button" class="colapsable__button">UX Research</button>
             <div class="colapsable__text">
-              <img src="#"></img>
+              <a href="https://drive.google.com/file/d/1F8Weq1__X7VzbAWnRhQZ517AIVh4c9mS/view?usp=sharing" target="blank"><img src="./img/uxresearch.jpg"></img></a>
             </div>
           </div>
         </div>
@@ -262,6 +286,42 @@
             <div class="colapsable__text">
               <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus eligendi esse unde modi beatae corrupti nostrum, repudiandae numquam ad qui provident maiores, minus est iure adipisci, commodi similique aliquid dolorum?</p>
             </div>
+          </div>
+        </div>
+      </section>
+      <section id="contacto">
+        <div class="wrapper">
+          <h2 class="title__h2">CONTÁCTAME</h2>
+          <div class="card__contact-form">
+            <form class="contact2-form validate-form">
+					<span class="contact2-form-title">
+						Ingresa tus datos
+					</span>
+
+					<div class="wrap-input2 validate-input" data-validate="Introduce tu nombre">
+						<input class="input2" type="text" name="name">
+						<span class="focus-input2" data-placeholder="Nombre"></span>
+					</div>
+
+					<div class="wrap-input2 validate-input" data-validate = "Introduce un email valido: ex@abc.xyz">
+						<input class="input2" type="text" name="email">
+						<span class="focus-input2" data-placeholder="Correo electronico"></span>
+					</div>
+
+					<div class="wrap-input2 validate-input" data-validate = "Introduce un mensaje">
+						<textarea class="input2" name="message"></textarea>
+						<span class="focus-input2" data-placeholder="Mensaje"></span>
+					</div>
+
+					<div class="container-contact2-form-btn">
+						<div class="wrap-contact2-form-btn">
+							<div class="contact2-form-bgbtn"></div>
+							<button class="contact2-form-btn">
+								Envía tu mensaje
+							</button>
+						</div>
+					</div>
+				</form>
           </div>
         </div>
       </section>
